--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -70,3 +70,6 @@
     background:linear-gradient(to bottom, #34CACA 5%, #30C9C9 100%);
     background-color:#34CACA;
 }
+.hid {
+    display: none;
+}
