--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -7,7 +7,6 @@
     box-shadow: 0px 0px 15px rgba(0, 0, 0, 0.22);
     -moz-box-shadow: 0px 0px 15px rgba(0, 0, 0, 0.22);
     -webkit-box-shadow:  0px 0px 15px rgba(0, 0, 0, 0.22);
-
 }
 .form-style-8 h2{
     background: #4D4D4D;
@@ -70,6 +69,10 @@
     background:linear-gradient(to bottom, #34CACA 5%, #30C9C9 100%);
     background-color:#34CACA;
 }
+
 .hid {
     display: none;
+}
+.resultlist {
+    width: 94%;
 }
